--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@pamlight/client",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "The library for syncing data changes to multiple devices from your database",
     "main": "index.js",
     "typings": "dist/index",
@@ -32,13 +32,13 @@
         "lodash": "^4.17.15",
         "object-hash": "^1.3.1",
         "rxjs": "^6.4.0",
-        "socket.io-client": "^2.2.0"
+        "socket.io-client": "^2.2.0",
+        "@types/socket.io-client": "^1.4.32"
     },
     "devDependencies": {
         "@types/chai": "^4.1.7",
         "@types/lodash": "^4.14.123",
         "@types/mocha": "^5.2.6",
-        "@types/socket.io-client": "^1.4.32",
         "chai": "^4.2.0",
         "fs-extra": "^7.0.1",
         "minimist": "^1.2.0",
