--- a/package.json
+++ b/package.json
@@ -29,16 +29,17 @@
     },
     "homepage": "https://pamlight.com",
     "dependencies": {
+        "@types/socket.io-client": "^1.4.32",
         "lodash": "^4.17.15",
-        "object-hash": "^1.3.1",
+        "object-hash": "^2.0.0",
         "rxjs": "^6.4.0",
-        "socket.io-client": "^2.2.0",
-        "@types/socket.io-client": "^1.4.32"
+        "socket.io-client": "^2.2.0"
     },
     "devDependencies": {
         "@types/chai": "^4.1.7",
         "@types/lodash": "^4.14.123",
         "@types/mocha": "^5.2.6",
+        "@types/object-hash": "^1.3.0",
         "chai": "^4.2.0",
         "fs-extra": "^7.0.1",
         "minimist": "^1.2.0",
